# zxtp

./: .gitignore  README.md  config.toml  pyproject.toml
docs/: database-schema.md
docs/superpowers/plans/: 2026-06-17-tqlex-gsgk-fetch.md  2026-06-19-tqlex-gdyj-fetch.md  2026-06-19-ybpj-structured-roadmap.md  2026-06-20-cwfx-financial-analysis-implementation.md  2026-06-20-earnings-forecast-metrics-implementation.md  2026-06-20-yzyq-stage4-stage5-implementation.md  2026-06-21-ai-context-balance-sheet-summary.md  2026-06-21-ai-context-cash-flow-summary.md  2026-06-21-business-analysis-summary.md  2026-06-21-financial-key-metrics-report-date.md  2026-06-21-structured-write-progress.md
docs/superpowers/specs/: 2026-06-17-tqlex-gsgk-fetch-design.md  2026-06-19-tqlex-gdyj-fetch-design.md  2026-06-20-cwfx-financial-analysis-design.md  2026-06-20-earnings-forecast-metrics-design.md  2026-06-20-yzyq-stage4-stage5-design.md  2026-06-21-ai-context-balance-sheet-summary-design.md  2026-06-21-ai-context-cash-flow-summary-design.md  2026-06-21-business-analysis-summary-design.md  2026-06-21-financial-key-metrics-report-date-design.md  2026-06-21-structured-write-progress-design.md
src/zxtp/: __init__.py  ai_context.py  cli.py  config.py  structured.py  tqlex.py
src/zxtp/templates/ai_context/: full_context.md.tpl
tests/: test_ai_context.py  test_cli.py  test_structured.py  test_tqlex.py
