[project]
name = "zxtp"
version = "0.1.0"
description = "Personal AI-assisted stock research toolkit built around local cached TQLEX data."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
zxtp = "zxtp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zxtp = ["templates/**/*.tpl"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
